tests/baselines/reference/objectTypeWithConstructSignatureHidingMembersOfFunction.errors.txt
objectTypeWithConstructSignatureHidingMembersOfFunction.ts(8,37): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithConstructSignatureHidingMembersOfFunction.ts(9,61): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithConstructSignatureHidingMembersOfFunction.ts(10,11): error TS2454: Variable 'i' is used before being assigned.
objectTypeWithConstructSignatureHidingMembersOfFunction.ts(18,37): error TS2454: Variable 'x' is used before being assigned.
objectTypeWithConstructSignatureHidingMembersOfFunction.ts(19,61): error TS2454: Variable 'x' is used before being assigned.
objectTypeWithConstructSignatureHidingMembersOfFunction.ts(20,11): error TS2454: Variable 'x' is used before being assigned.


==== objectTypeWithConstructSignatureHidingMembersOfFunction.ts (6 errors) ====
    interface I {
        new(): number;
        apply(a: any, b?: any): void;
        call(thisArg: number, ...argArray: number[]): any;
    }
    
    var i: I;
    var r1: (a: any, b?: any) => void = i.apply;
                                        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r1b: (thisArg: number, ...argArray: number[]) => void = i.call;
                                                                ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r1c = i.arguments;
              ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var x: {
        new(): number;
        apply(a: any, b?: any): void;
        call(thisArg: number, ...argArray: number[]): any;
    }
    
    var r2: (a: any, b?: any) => void = x.apply;
                                        ~
!!! error TS2454: Variable 'x' is used before being assigned.
    var r2b: (thisArg: number, ...argArray: number[]) => void = x.call;
                                                                ~
!!! error TS2454: Variable 'x' is used before being assigned.
    var r2c = x.arguments;
              ~
!!! error TS2454: Variable 'x' is used before being assigned.
    